# resume

./: .envrc  .gitignore  Makefile  README.md  justfile  resume.yaml  style.css
.github/workflows/: render-templates.yml
nix/: shell.nix  treefmt.nix
python/: Pipfile  generate_pdf.py  pyproject.toml  render_template.py  render_templates.py
python/resume/: render_templates.py
rendered/: resume.html  resume.md  resume.tex
templates/: resume_template.html  resume_template.md  resume_template.tex
