[tool.poetry]
name = "python"
version = "0.1.0"
description = "Renders my templates with yaml data"
authors = ["Sean Gatewood <stg2bd@virginia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "3.0.3"
pyyaml = "6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
